# serialize

./: .gitignore  CMakeLists.txt  README.md
include/serialize/: array.hpp  base.hpp  bitfield.hpp  buffer.hpp  context.hpp  json.hpp  list.hpp  memory.hpp  numeric.hpp  pointer.hpp  primitive.hpp  string.hpp  structure.hpp  util.hpp  virtual.hpp  visitor.hpp
src/: CMakeLists.txt
src/serialize/: array.cpp  base.cpp  bitfield.cpp  buffer.cpp  context.cpp  list.cpp  pointer.cpp  string.cpp  structure.cpp  util.cpp  virtual.cpp
src/serialize/json/: schema_loader.cpp
test/: CMakeLists.txt
test/fixtures/schemas/simple/: input.txt  schema.json
test/serialize/: array_test.cpp  bitfield_test.cpp  json_test.cpp  list_test.cpp  numeric_test.cpp  pointer_test.cpp  primitive_test.cpp  string_test.cpp  structure_test.cpp
test/serialize/json/: schema_loader_test.cpp
